# cw-lamp

./: Cargo.toml  README.md  simulatooooooor.ipynb
.github/workflows/: Basic.yml
src/: continuous_average.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
