[package]
name = "liesurely-lamp"
version = "0.1.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw4 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
dao-interface = { version = "*", git = "https://github.com/DA0-DA0/dao-contracts.git" }

[dev-dependencies]
anyhow = { version = "1.0.51"}
cw-multi-test = "0.16.2"
dao-voting-cw721-staked = { version = "*", git = "https://github.com/DA0-DA0/dao-contracts.git" }
cw721-base = "0.16.0"
